<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tylerhosting.hoot.hoot.ImportLexiconActivity"
    tools:showIn="@layout/activity_import_lexicon">

    <Button
        android:id="@+id/Search"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:imeOptions="actionNext"
        android:text="Search"
        app:layout_constraintBottom_toTopOf="@+id/lexName"
        app:layout_constraintEnd_toStartOf="@+id/lexFile"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1.1" />

    <EditText
        android:id="@+id/lexName"
        android:layout_width="218dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:gravity="top"
        android:hint="@string/lexicon_name"
        android:imeOptions="actionNext"
        android:nextFocusForward="@+id/lexLanguage"
        android:singleLine="true"
        android:inputType="textNoSuggestions|text"
        app:layout_constraintBottom_toTopOf="@+id/lexSource"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Search"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1.3" />

    <Spinner
        android:id="@+id/lexLanguage"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lexName"
        tools:entries="en" />

    <Spinner
        android:id="@+id/lexTileSet"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toBottomOf="@+id/lexName"
        app:layout_constraintEnd_toEndOf="parent"
        tools:entries="English" />

    <EditText
        android:id="@+id/lexSource"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:editable="true"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/lexicon_source"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:minHeight="120dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/lexNotice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lexName"
        app:layout_constraintVertical_bias="0.56"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="2" />

    <EditText
        android:id="@+id/lexNotice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/lexicon_notice_copyright"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:minHeight="120dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/lexDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lexSource"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="4" />

    <EditText
        android:id="@+id/lexDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/lexicon_description"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:minHeight="120dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/beginImport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lexNotice"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="4" />

    <Button
        android:id="@+id/beginImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="Begin Import"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lexFile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:editable="false"
        android:hint="Search for File"
        android:paddingLeft="8dp"
        android:text="File"
        app:layout_constraintBottom_toBottomOf="@+id/Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Search"
        app:layout_constraintTop_toTopOf="@+id/Search" />

</android.support.constraint.ConstraintLayout>
